gah finally finish the purchases (basically)

--- a/app/src/main/res/xml/my_account.xml
+++ b/app/src/main/res/xml/my_account.xml
@@ -21,6 +21,10 @@
         android:title="@string/setup_my_account"
         android:summary="@string/setup_my_account_summary" />
 
+    <Preference
+        android:key="@string/pref_subscriber_status"
+        android:title="@string/lifetime_subscriber" />
+
     <Preference android:key="@string/pref_message_count" />
 
     <Preference
