--- a/app/src/main/res/values/preferences.xml
+++ b/app/src/main/res/values/preferences.xml
@@ -37,6 +37,7 @@
     <string name="pref_help_email" translatable="false">email</string>
     <string name="pref_help_twitter" translatable="false">twitter</string>
 
+    <string name="pref_subscriber_status" translatable="false">subscriber_status</string>
     <string name="pref_message_count" translatable="false">message_count</string>
 
     <string name="pref_contact_pin_conversation" translatable="false">contact_pin_conversation</string>
