--- a/app/src/main/res/layout/message_sent.xml
+++ b/app/src/main/res/layout/message_sent.xml
@@ -33,6 +33,7 @@
         android:background="@drawable/message_sent_background"
         android:backgroundTint="@color/drawerBackground"
         android:maxWidth="@dimen/max_message_width"
+        android:minWidth="@dimen/min_mms_picture_width"
         android:padding="8dp"
         android:paddingStart="8dp"
         android:paddingEnd="20dp"
