add a 'forgot password' button to the login, that will take them to the forgot password FAQ

--- a/api_implementation/src/main/res/layout/api_activity_login.xml
+++ b/api_implementation/src/main/res/layout/api_activity_login.xml
@@ -123,6 +123,16 @@
                 android:hint="@string/api_password"
                 android:layout_marginBottom="8dp" />
 
+            <TextView
+                android:id="@+id/forgot_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:padding="8dp"
+                android:background="?selectableItemBackground"
+                android:textColor="@color/api_text_accent"
+                android:text="@string/api_forgot_password"/>
+
         </LinearLayout>
 
         <android.support.design.widget.FloatingActionButton
