fix lint for missing translations

--- a/api_implementation/src/main/res/values/api_string.xml
+++ b/api_implementation/src/main/res/values/api_string.xml
@@ -56,7 +56,7 @@
     <string name="api_activate_2_3">to connect your account!</string>
     <string name="api_confirm_password">Please confirm your password:</string>
     <string name="api_wrong_password">Confirmation failed. Is your password correct?</string>
-    <string name="api_email_taken">An error occured logging in, do you already have an account with this email?</string>
+    <string name="api_email_taken">An error occurred logging in, do you already have an account with this email?</string>
     <string name="api_confirm">Confirm</string>
     <string name="api_continue">Continue</string>
 
