multi select on the message list. Actions not implemented yet

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -32,4 +32,6 @@
     <color name="emptyTextSecondary">#8C000000</color>
     <color name="deleteIcon">@color/background</color>
 
+    <color name="actionModeBackground">#404040</color>
+
 </resources>
