--- a/app/src/main/res/menu/action_mode_message_list.xml
+++ b/app/src/main/res/menu/action_mode_message_list.xml
@@ -17,7 +17,7 @@
     <item
         android:id="@+id/menu_message_info"
         android:title="@string/view_details"
-        android:icon="@drawable/ic_pin"
+        android:icon="@drawable/ic_info"
         app:showAsAction="always" />
 
 </menu>
