add bottom sheet for share options on messages and finish the multi select implemetation on message list

--- a/app/src/main/res/menu/action_mode_message_list.xml
+++ b/app/src/main/res/menu/action_mode_message_list.xml
@@ -15,7 +15,7 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/menu_message_info"
+        android:id="@+id/menu_message_details"
         android:title="@string/view_details"
         android:icon="@drawable/ic_info"
         app:showAsAction="always" />
