--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -19,6 +19,12 @@
     <version
         name="1.8.6"
         description="November 10th, 2016">
+        <text>Fixes for updating conversation titles and contact images</text>
+    </version>
+
+    <version
+        name="1.8.6"
+        description="November 10th, 2016">
         <text>Multi-select on conversation list to delete, archive, mute, and pin conversations</text>
         <text>Multi-select on message list to delete, share, and get message info</text>
         <text>Changes to swipe to delete on the conversation list</text>
