--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -18,6 +18,7 @@
 
     <dimen name="fab_margin">32dp</dimen>
     <dimen name="conversation_list_padding">120dp</dimen>
+    <dimen name="bottom_sheet_padding">220dp</dimen>
     <dimen name="message_list_padding">96dp</dimen>
     <dimen name="max_message_width">436dp</dimen>
     <dimen name="max_gif_width">350dp</dimen>
