--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,6 +26,7 @@
 
     <dimen name="fab_margin">24dp</dimen>
     <dimen name="conversation_list_padding">0dp</dimen>
+    <dimen name="bottom_sheet_padding">0dp</dimen>
     <dimen name="top_extra_padding">0dp</dimen>
     <dimen name="conversation_list_header_padding">16dp</dimen>
     <dimen name="message_list_padding">0dp</dimen>
