--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -17,8 +17,9 @@
 <changelog>
 
     <version
-        name="1.8.6"
-        description="November 10th, 2016">
+        name="1.8.7"
+        description="November 12th, 2016">
+        <text>Edit scheduled messages</text>
         <text>Fixes for updating conversation titles and contact images</text>
         <text>Improvements for sound effects</text>
     </version>
