--- a/api_implementation/src/main/res/values-pt-rBR/api_string.xml
+++ b/api_implementation/src/main/res/values-pt-rBR/api_string.xml
@@ -15,7 +15,39 @@
   ~ limitations under the License.
   -->
 <resources>
+    <string name="api_login">Login</string>
+    <string name="api_signup">Inscrever-se</string>
+    <string name="api_signup_failed">Não pode inscrever-se neste dispositivos, você deve registrar primeiro um dispositivo primário que possua um número de telefone!</string>
+    <string name="api_skip_signup">Ou se você quiser usar o app neste dispositivo sem as funções de rede como enviar SMS do tablet ou computador, você pode pular este passo:</string>
+    <string name="api_skip">Pular</string>
+    <string name="api_email">Endereço de e-mail</string>
+    <string name="api_password">Senha</string>
+    <string name="api_forgot_password">Esqueceu a senha?</string>
+    <string name="api_password_confirmation">Confirme a senha</string>
+    <string name="api_name">Nome</string>
+    <string name="api_phone_number">Número de telefone</string>
+    <string name="api_connecting">Conectando ao servidor...</string>
+    <string name="api_error">Um erro ocorreu durante a operação</string>
+    <string name="api_device_error">Um erro ocorreu ao adicionar este dispositivo. Vamos tentar novamente!</string>
+    <string name="api_add_second_primary_device">Parece que você já tem um dispositivo primário (%1$s) para sua conta e apenas um é permitido! Você quer remover o dispositivo primário atual e configurar este como o novo primário??</string>
+    <string name="api_yes">Sim</string>
+    <string name="api_no">Não</string>
+    <string name="api_no_email">Nenhum e-mail digitado</string>
+    <string name="api_email_invalid">Endereço de e-mail inválido</string>
+    <string name="api_no_password">Nenhuma senha digitada</string>
+    <string name="api_no_password_confirmation">Confirmação de senha não digitada</string>
+    <string name="api_password_mismatch">Senhas não coincidem</string>
+    <string name="api_no_name">Nome não digitado</string>
+    <string name="api_no_phone_number">Nenhum telefone digitado</string>
+    <string name="api_login_error">Um erro ocorreu durante o login, senha ou e-mail estão errados?</string>
+    <string name="api_activate_summary">Entre para pegar todas as suas mensagens neste dispositivo!</string>
+    <string name="api_activate_1_2">tv.klinkerapps.com</string>
+    <string name="api_activate_1_3">em um dispositivo móvel ou computador.</string>
+    <string name="api_activate_2_1">No site</string>
     <string name="api_activate_2_2">Digite o código à direita</string>
+    <string name="api_activate_2_3">Conectar sua conta!</string>
+    <string name="api_confirm_password">Por favor, confirme sua senha:</string>
+    <string name="api_wrong_password">Confirmação falhou. Sua senha está correta?</string>
     <string name="api_email_taken">Um erro ocorreu durante o login, você já tem uma conta com este e-mail?</string>
     <string name="api_confirm">Confirmar</string>
     <string name="api_continue">Continue</string>
