improve the about and help/feedback sections

--- a/app/src/main/res/xml/help_and_feedback.xml
+++ b/app/src/main/res/xml/help_and_feedback.xml
@@ -25,6 +25,11 @@
         android:title="@string/features" />
 
     <Preference
+        android:key="@string/pref_help_issues"
+        android:title="@string/issues"
+        android:summary="@string/issues_summary" />
+
+    <Preference
         android:key="@string/pref_help_google_plus"
         android:title="@string/google_plus"
         android:summary="@string/google_plus_summary" />
