--- a/app/src/main/res/layout/fragment_invite_friends.xml
+++ b/app/src/main/res/layout/fragment_invite_friends.xml
@@ -18,7 +18,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/drawerBackground">
 
     <TextView
         android:layout_width="match_parent"
