--- a/app/src/main/res/values/preferences.xml
+++ b/app/src/main/res/values/preferences.xml
@@ -31,6 +31,7 @@
     <string name="pref_about_privacy_policy" translatable="false">privacy_policy</string>
     <string name="pref_about_beta" translatable="false">beta</string>
 
+    <string name="pref_help_issues" translatable="false">issue_tracker</string>
     <string name="pref_help_faqs" translatable="false">faqs</string>
     <string name="pref_help_features" translatable="false">features</string>
     <string name="pref_help_google_plus" translatable="false">google+</string>
