--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -46,7 +46,8 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:layout_marginEnd="24dp"
-            android:layout_gravity="bottom"
+            android:layout_gravity="bottom|start"
+            android:gravity="start"
             android:id="@+id/contact_entry" />
 
     </FrameLayout>
