--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -96,4 +96,23 @@
         <item>vibrate_one_short_one_long</item>
         <item>vibrate_one_long_one_short</item>
     </string-array>
+
+    <string-array name="repeat">
+        <item>@string/repeat_never</item>
+        <item>@string/repeat_one_min</item>
+        <item>@string/repeat_five_mins</item>
+        <item>@string/repeat_ten_mins</item>
+        <item>@string/repeat_half_hour</item>
+        <item>@string/repeat_hour</item>
+    </string-array>
+
+    <string-array name="repeat_values">
+        <item>never</item>
+        <item>one_min</item>
+        <item>five_min</item>
+        <item>ten_min</item>
+        <item>half_hour</item>
+        <item>hour</item>
+    </string-array>
+
 </resources>
