custom snooze timeouts

--- a/app/src/main/res/menu/snooze_off.xml
+++ b/app/src/main/res/menu/snooze_off.xml
@@ -44,4 +44,8 @@
         android:title="@string/menu_snooze_72"
         android:id="@+id/menu_snooze_72" />
 
+    <item
+        android:title="@string/menu_snooze_custom"
+        android:id="@+id/menu_snooze_custom" />
+
 </menu>
