run the dashclock extesion off of the widget updates

--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -22,6 +22,7 @@
         <text>Option to repeat notifications on a timed interval</text>
         <text>Option to add a signature to your messages</text>
         <text>Custom snooze timeouts</text>
+        <text>Dashclock extension</text>
         <text>Improvements to deleting single messages from message list</text>
         <text>Tons of RTL fixes</text>
         <text>Test notification button when customizing notifications</text>
