--- a/app/src/main/res/layout/item_attach_image.xml
+++ b/app/src/main/res/layout/item_attach_image.xml
@@ -38,4 +38,16 @@
         android:padding="2dp"
         android:visibility="gone" />
 
+    <ImageView
+        app:layout_widthPercent="100%"
+        app:layout_aspectRatio="100%"
+        android:layout_margin="2dp"
+        android:id="@+id/selected_checkmark_layout"
+        android:src="@drawable/ic_done"
+        android:background="#66FFFFFF"
+        android:padding="20dp"
+        android:contentDescription="@null"
+        android:clickable="false"
+        android:visibility="gone"/>
+
 </android.support.percent.PercentFrameLayout>
