--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -19,6 +19,7 @@
     <version
         name="1.9.1"
         description="November 19th, 2016">
+        <text>Select multiple images to send at once</text>
         <text>Option to repeat notifications on a timed interval</text>
         <text>Option to add a signature to your messages</text>
         <text>Custom snooze timeouts</text>
