add copy directly to the long click message menu

--- a/app/src/main/res/menu/action_mode_message_list.xml
+++ b/app/src/main/res/menu/action_mode_message_list.xml
@@ -15,6 +15,12 @@
         app:showAsAction="always" />
 
     <item
+        android:id="@+id/menu_copy_message"
+        android:title="@string/copy_message"
+        android:icon="@drawable/ic_copy"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/menu_message_details"
         android:title="@string/view_details"
         android:icon="@drawable/ic_info"
